# sample-code-for-a-secure-vault-using-aws-nitro-enclaves

./: .gitignore  Cargo.toml  README.md  buildspec.yml  readme_chainless.md  vault_template.yml
enclave/: Cargo.toml  Dockerfile  Makefile  build.rs
enclave/src/: attestation.rs  ed25519.rs  error.rs  expressions.rs  functions.rs  kms.rs  lib.rs  main.rs  models.rs
enclave/src/attestation/: apple.rs  aws.rs  common.rs  google.rs  mod.rs
enclave/src/attestation/testdata/: android_google_real_world_attestation_object.txt  android_hongmeng_real_world_attestation_object.txt  android_vivo_real_world_attestation_object.txt  android_xiaomi_real_world_attestation_object.txt  ios_real_world_assertion_object.txt  ios_real_world_attestation_object.txt
enclave/src/aws_ne/: ffi.rs  mod.rs
enclave/src/codec/: bs58.rs  bs64.rs  hex.rs  json.rs  mod.rs
enclave/src/credential/: aws.rs  common.rs  mod.rs
enclave/src/credential/assertion/: apple.rs  google.rs  mod.rs
enclave/src/credential/attestation/: apple.rs  google.rs  mod.rs
enclave/src/credential/testdata/: android_samsung_real_world_attestation_object.txt  android_xiaomi_real_world_assertion_object.txt  android_xiaomi_real_world_assertion_object2.txt  android_xiaomi_real_world_attestation_object2.txt  ios_real_world_assertion_object2.txt  ios_real_world_attestation_object2.txt
enclave/src/model/: create_wallet_key.rs  generate_root_secret_ciphertext.rs  inject_root_secret_ciphertext.rs  mod.rs  modify_password.rs  modify_pwd.rs  recover_wallet.rs  register_tee_device.rs  sign.rs  sign_without_assertion.rs  tee_client_register.rs  wallet_recovery.rs  wallet_sign.rs  wallet_sign_without_assertion.rs
parent/: Cargo.toml  Dockerfile  Makefile
parent-cli/: Cargo.toml  README.md
parent-cli/src/: main.rs
parent/src/: application.rs  constants.rs  enclaves.rs  models.rs  routes.rs
parent/tests/: http_integration.rs
