[package]
name = "enclave-vault"
version = "0.1.0"
authors = ["Justin Plock <jplock@amazon.com>"]
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "enclave-vault"
path = "src/main.rs"

# Clippy lints for no-panic Rust hardening
# These help catch panic-prone patterns at compile time
[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"

[dependencies]
anyhow = { version = "=1.0.100", default-features = false }
libc = { version = "=0.2.178", default-features = false }
aws-lc-rs = { version = "=1.15.2", default-features = false }
cel-interpreter = { version = "=0.10.0", default-features = false, features = [
    "json",
    "chrono",
] }
chrono = { version = "=0.4.42", default-features = false, features = ["now"] }
data-encoding = { version = "=2.9.0", default-features = false, features = [
    "alloc",
] }
rayon = { version = "=1.10.0", default-features = false }
serde = { version = "=1.0.228", default-features = false, features = [
    "derive",
] }
serde_json = { version = "=1.0.145", default-features = false }
rustls = { version = "=0.23.35", default-features = false, features = [
    "aws_lc_rs",
    "prefer-post-quantum",
] }
vsock = { version = "=0.5.2", default-features = false }
zeroize = { version = "=1.8.2", default-features = false, features = [
    "zeroize_derive",
] }
ed25519-dalek = "=1.0.1"
rand = "0.7"
base64 = "0.22.1"
bs58 = "0.5.1"
hex = "0.4"
async-std = "1.12.0"
aws-sdk-kms = "^1.97.0"
aws-credential-types = { version = "=1.2.11", default-features = false }
aws-config = { version = "=1.8.12", default-features = false, features = [
    "rt-tokio",
    "behavior-version-latest",
    "default-https-client",
] }
tokio = { version = "1.41.0", features = ["full"] }


## aws-nitro-enclaves-nsm-api = { version = "0.4", default-features = false }
aws-nitro-enclaves-nsm-api = { version = "0.4", default-features = false, features = [
    "nix",
] }
serde_bytes = { version = "0.11", default-features = false }
serde_cbor = { version = "0.11", default-features = false }
foreign-types = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "=0.1.48", default-features = false, features = [
    "secure",
] }

[dev-dependencies]
proptest = { version = "=1.9.0", default-features = false, features = ["std"] }
aws-nitro-enclaves-cose = { version = "0.5", features = ["openssl"] }
