[package]
name = "parent-cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
enclave-vault = { path = "../enclave" }
anyhow = { version = "=1.0.100", default-features = false, features = ["std"] }
clap = { version = "=4.5.53", default-features = false, features = [
    "std",
    "derive",
    "help",
] }
reqwest = { version = "=0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "=1.0.228", default-features = false, features = [
    "derive",
] }
serde_json = { version = "=1.0.145", default-features = false, features = [
    "std",
] }
tokio = { version = "=1.48.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
